# rand

./: Cargo.toml
rand_chacha/src/: chacha.rs
rand_core/: Cargo.toml
rand_core/src/: block.rs  error.rs  lib.rs
rand_distr/: Cargo.toml
rand_distr/src/: dirichlet.rs  lib.rs  weighted_alias.rs
rand_distr/tests/: value_stability.rs
rand_hc/src/: hc128.rs
src/: lib.rs  rng.rs
src/distributions/: mod.rs  other.rs  weighted_index.rs
src/seq/: index.rs  mod.rs
